--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -60,7 +60,7 @@
     --fs-label-small: 1.1rem;
     
     /*--font weitht--*/
-    
+
     --weight-regular: 400;
     --weight-medium: 500;
     
@@ -77,7 +77,7 @@
     
     /*others*/
 
-    --header-height: 64px; 
+    --header-height: 64px;
     --mobile-nav-height: 80px;
     --section-gap: 32px;
 
@@ -87,8 +87,8 @@
  :root   {
 
     /*transition*/
-    --transition-timing-function: cubic-bezier(0.2, 0, 0, 1); 
-    --transition-short: 200ms var(--transition-timing-function); 
+    --transition-timing-function: cubic-bezier(0.2, 0, 0, 1);
+    --transition-short: 200ms var(--transition-timing-function);
     --transition-medium: 500ms var(--transition-timing-function);
     }
 }
@@ -205,31 +205,21 @@ main { flex-grow: 1;}
 
 :focus-visible{ outline-color: var(--primary);}
 
-.display-large {
-    font-family: var(--font-primary);
-    font-size: var(--fs-display-large);
-    font-weight: var(--weight-regular);
-    line-height: 32px;
-    letter-spacing: -0.25px;
-}
-.display-medium {
-    font-size: var(--fs-display-medium);
-    line-height: 36;
-}
+/* tipografia*/ 
 
-/* typography*/
 .display-large {
     font-family: var(--font-primary);
     font-size: var(--fs-display-large);
     font-weight: var(--weight-regular);
     line-height: 32px;
     letter-spacing: -0.25px;
-}
+} 
 
 .display-medium {
     font-size: var(--fs-display-medium);
     line-height: 36px;
 }
+
 
 .display-small {
     font-family: var(--font-primary);
@@ -255,7 +245,7 @@ main { flex-grow: 1;}
     font-size: var(--fs-title-small);
     font-weight: var(--weight-medium);
     line-height: 20px;
-    letter-spacing: 0.1;
+    letter-spacing: 0.1px;
 }
 
 .body-large {
@@ -353,93 +343,6 @@ main { flex-grow: 1;}
 
 .section-title { margin-block-end: 12px;}
 
-/*--icon button--*/
-
-.icon-btn {
-    width: 40px;
-    height: 40px;
-    display: grid;
-    place-items: center;
-    background-color: var(--primary-container);
-    border-radius: var(--radius-circle);
-}
-
-.btn {
-    height: 40px;
-    max-width: max-content;
-    padding-inline: 24px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 8px;
-    border-radius: var(--radius-4);
-    transition: var(--transition-short);
-}
-
-.btn .material-symbols-outlined { font-size: 1.8rem;}
-
-.btn.has-icon { padding-inline-start: 16px;}
-
-/*--primary btn--*/
-
-.btn-primary {
-    background-color: var(--primary);
-    color: var(--white);
-}
-
-.btn-primary:where(:hover, :focus-visible):not(:active) {
-    background-color: var(--primary-hover);
-}
-
-/*--secondary button--*/
-
-.btn-secondary { background-color: var(--primary-container);}
-
-/* badge button */
-
-.badge-btn {
-    height: 40px;
-    border-radius: var(--radius-pill);
-    background-color: var(--badge-btn);
-    color: var(--on-badge-btn);
-    max-width: max-content;
-    padding-inline: 16px;
-    display: grid;
-    place-items: center;
-}
-
-/*--header--*/
-
-.navbar,
-.header .btn-primary {
-    display: none;
-}
-
-.header {
-    background-color: var(--background);
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: var(--header-height);
-    display: flex;
-    justify-content: space-between;
-    gap: 20px;
-    padding-inline: 16px;
-    padding-block: 14px;
-    border-block-end: 1px solid var(--outline);
-    z-index: 4;
-}
-
-.theme-switch { margin-inline-start: auto;}
-
-[data-theme="light"] .logo-dark,
-[data-theme="dark"] .logo-light,
-[data-theme="light"] .light-icon,
-[data-theme="dark"] .dark-icon {
-    display: none;
-}
-
 /*--mobile-nav--*/
 
 .mobile-nav {
@@ -487,6 +390,171 @@ main { flex-grow: 1;}
 .mobile-nav .nav-link[aria-current="true"] .material-symbols-outlined {
     font-variation-settings: 'FILL' 1;
 }
+
+
+/*--secondary tab--*/
+
+.tab-list {
+    display: flex;
+    color: var(--on-background-variant);
+    box-shadow: inset 0 -1px 0 var(--outline);
+    overflow: auto;
+    scrollbar-width: none;
+}
+
+.tab-list::-webkit-scrollbar { display: none;}
+
+.tab-btn {
+    height: 48px;
+    padding-inline: 24px;
+    border-block-end: 2px solid transparent;
+    transition: var(--transition-short);
+    flex: 1 0 80px;
+}
+
+.tab-btn:where(:hover, :focus-visible):not(:active) {
+    background-color: var(--alpha-10);
+}
+
+.tab-btn[aria-selected="true"] {
+    color: var(--on-background);
+    border-color: var(--primary);
+}
+
+
+/* card */
+
+.card {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+}
+
+.card:not(:has(.skeleton)) {
+    animation: fade-in 500ms var(--transition-timing-function) forwards;
+    transform: translateY(30px);
+    opacity: 0;
+}
+
+@keyframes fade-in {
+     0% {
+        transform: translateY(30px);
+        opacity: 0;
+     }
+     100% {
+        transform: translateY(0);
+        opacity: 1;
+     }
+}
+
+.card-media {
+    aspect-ratio: 1 / 1;
+    border-radius: var(--radius-4);
+
+}
+
+.card-body {
+    flex-grow: 1;
+    padding: 8px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    gap: 8px
+}
+
+.card-link {
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 2;
+    overflow-y: hidden;
+    transition: var(--transition-short);
+}
+
+.card-link:where(:hover, :focus-visible) {color: var(--primary);}
+
+.card-link::before {
+    content: "";
+    position: absolute;
+    inset: 0;
+}
+
+.card :where(.meta-wrapper, .meta-item) {
+    display: flex;
+    align-items: center;
+}
+
+.card .meta-wrapper { justify-content: space-between;}
+
+.card .meta-item {gap:8px;}
+
+.card .meta-item .material-symbols-outlined { font-size: 1.8rem;}
+
+.saved .bookmark-add,
+.removed .bookmark {
+    display: none;
+}
+
+.saved .bookmark { font-variation-settings: "FILL" 1;}
+
+/*--icon button--*/
+
+.icon-btn {
+    width: 40px;
+    height: 40px;
+    display: grid;
+    place-items: center;
+    background-color: var(--primary-container);
+    border-radius: var(--radius-circle);
+}
+
+/* button */
+
+.btn {
+    height: 40px;
+    max-width: max-content;
+    padding-inline: 24px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 8px;
+    border-radius: var(--radius-4);
+    transition: var(--transition-short);
+}
+
+.btn .material-symbols-outlined { font-size: 1.8rem;}
+
+.btn.has-icon { padding-inline-start: 16px;}
+
+/*--primary btn--*/
+
+.btn-primary {
+    background-color: var(--primary);
+    color: var(--white);
+}
+
+.btn-primary:where(:hover, :focus-visible):not(:active) {
+    background-color: var(--primary-hover);
+}
+
+/*--secondary button--*/
+
+.btn-secondary { background-color: var(--primary-container);}
+
+/* badge button */
+
+.badge-btn {
+    height: 40px;
+    border-radius: var(--radius-pill);
+    background-color: var(--badge-btn);
+    color: var(--on-badge-btn);
+    max-width: max-content;
+    padding-inline: 16px;
+    display: grid;
+    place-items: center;
+}
+
+
 
 /*--hero--*/
 
@@ -572,34 +640,6 @@ main { flex-grow: 1;}
 }
 
 
-/*--secondary tab--*/
-
-.tab-list {
-    display: flex;
-    color: var(--on-background-variant);
-    box-shadow: inset 0 -1px 0 var(--outline);
-    overflow: auto;
-    scrollbar-width: none;
-}
-
-.tab-list::-webkit-scrollbar { display: none;}
-
-.tab-btn {
-    height: 48px;
-    padding-inline: 24px;
-    border-block-end: 2px solid transparent;
-    transition: var(--transition-short);
-    flex: 1 0 80px;
-}
-
-.tab-btn:where(:hover, :focus-visible):not(:active) {
-    background-color: var(--alpha-10);
-}
-
-.tab-btn[aria-selected="true"] {
-    color: var(--on-background);
-    border-color: var(--primary);
-}
 
 
 
@@ -632,80 +672,38 @@ main { flex-grow: 1;}
     width: 80%;
 }
 
-/* card */
+/*--header--*/
 
-.card {
-    position: relative;
-    display: flex;
-    flex-direction: column;
-    height: 100%;
-}
-
-.card:not(:has(.skeleton)) {
-    animation: fade-in 500ms var(--transition-timing-function) forwards;
-    transform: translateY(30px);
-    opacity: 0;
-}
-
-@keyframes fade-in {
-     0% {
-        transform: translateY(30px);
-        opacity: 0;
-     }
-     100% {
-        transform: translateY(0);
-        opacity: 1;
-     }
-}
-
-.card-media {
-    aspect-ratio: 1 / 1;
-    border-radius: var(--radius-4);
-
-}
-
-.card-body {
-    flex-grow: 1;
-    padding: 8px;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    gap: 8px
-}
-
-.card-link {
-    display: -webkit-box;
-    -webkit-box-orient: vertical;
-    -webkit-line-clamp: 2;
-    overflow-y: hidden;
-    transition: var(--transition-short);
-}
-
-.card-link:where(:hover, :focus-visible) {color: var(--primary);}
-
-.card-link::before {
-    content: "";
-    position: absolute;
-    inset: 0;
-}
-
-.card :where(.meta-wrapper, .meta-item) {
-    display: flex;
-    align-items: center;
-}
-
-.card .meta-wrapper { justify-content: space-between;}
-
-.card .meta-item {gap:8px;}
-
-.card .meta-item .material-symbols-outlined { font-size: 1.8rem;}
-
-.saved .bookmark-add,
-.removed .bookmark {
+.navbar,
+.header .btn-primary {
     display: none;
 }
 
-.saved .bookmark { font-variation-settings: "FILL" 1;}
+.header {
+    background-color: var(--background);
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: var(--header-height);
+    display: flex;
+    justify-content: space-between;
+    gap: 20px;
+    padding-inline: 16px;
+    padding-block: 14px;
+    border-block-end: 1px solid var(--outline);
+    z-index: 4;
+}
+
+.theme-switch { margin-inline-start: auto;}
+
+[data-theme="light"] .logo-dark,
+[data-theme="dark"] .logo-light,
+[data-theme="light"] .light-icon,
+[data-theme="dark"] .dark-icon {
+    display: none;
+}
+
 
 /* icon button */ 
 
