--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -105,6 +105,22 @@
     }
 }
 
+#savedRecipes {
+    
+}
+
+#savedRecipeCard {
+    padding: 6px;
+    border: .5px solid #ffffff3d;
+    border-radius: 4px;
+    max-width: 300px;
+    margin: 10px;
+  }
+
+#savedRecipeCard span{
+ font-size: 16px
+}
+
 [data-theme="light"] { 
     color-scheme: light;
     
