--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -83,6 +83,15 @@
 
 }
 
+.redirectParagraph a {
+    display: inline;
+    color: hsl(11, 51%, 51%)
+}
+
+.redirectParagraph {
+    color: #fff;
+}
+
 .logout {
     background-color: hsl(11, 51%, 51%);
     padding: 4px;
