--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -122,9 +122,18 @@
     padding: 6px;
     border: .5px solid #ffffff3d;
     border-radius: 4px;
-    max-width: 300px;
-    margin: 10px;
-  }
+    max-width: 400px;
+    margin: 10px auto;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    flex-wrap: wrap;
+    width: 95%;
+}
+
+#savedRecipeCard button {
+    color: hsl(11, 51%, 51%);
+}
 
 #savedRecipeCard span{
  font-size: 16px
